deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fullstack-zad2-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: fullstack-zad2
  template:
    metadata:
      labels:
        app: fullstack-zad2
    spec:
      containers:
        - name: fullstack-zad2-container
          image: michael1099/fullstack_zad2:v1.0.9  # Zastąp <registry>/<username> odpowiednimi danymi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 2
