service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fullstack_zad2
spec:
  type: NodePort
  selector:
    app: fullstack_zad2
  ports:
  - port: 80
    targetPort: 80
